# naiades

./: README.md
backend/: Makefile  pyproject.toml
backend/configs/: downloads.yaml.example
backend/naiades/: downloads.py  rss.py  server.py
backend/tests/: test_downloads.py  test_rss.py
frontend/naiades/: Makefile  index.html  package-lock.json  package.json
frontend/naiades/src/: App.css  App.tsx
